Fixes #5321 - Checklist: circle is not aligned correctly on long ticket titles.

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -14904,6 +14904,7 @@ div.accounted-time-value {
   .checklistItemTicketStateIndicator {
     width: 40px;
     height: 40px;
+    flex-shrink: 0;
     display: flex;
     align-items: center;
     justify-content: center;
